src/objects/MUSW__Parcel_Contact2__c.object
<CustomObject>
    <description>Contacts associated to a Parcel eg. Owner</description>
    <fields>
        <fullName>Cust_Address_Id__c</fullName>
        <externalId>true</externalId>
        <label>Cust Address Id</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Contact_Type__c</fullName>
        <description>The type of contact; i.e., owner, renter, etc.</description>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tenant</fullName>
                    <default>true</default>
                    <label>Tenant</label>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Appellant</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Business Owner</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Emergency Contact</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Interested Party</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related contact. Typically, it&apos;s the owner or a resident, such as renter.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Parcels</relationshipLabel>
        <relationshipName>Contact_Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parcel or address this contact is related to.</description>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Parcel_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for indicating which contact is the most important. Typically, this is the current owner. It&apos;s referenced by the code to populate contact lookups on objects related to this Parcel.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the address is Mailing address</description>
        <label>Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the address is Public address</description>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Parcel Contact</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parcel Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>